---
source: crates/stef-parser/tests/parser.rs
description: "mod a {\n    /// Inner module\n    mod b {\n        enum Sample {\n            One @1,\n        }\n    }\n\n    struct Sample {\n        value: u32 @1,\n    }\n}"
input_file: crates/stef-parser/tests/inputs/module_basic.stef
---
Schema {
    path: Some(
        "module_basic.stef",
    ),
    source: "mod a {\n    /// Inner module\n    mod b {\n        enum Sample {\n            One @1,\n        }\n    }\n\n    struct Sample {\n        value: u32 @1,\n    }\n}\n",
    definitions: [
        Module(
            Module {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "a",
                    span: Span {
                        start: 4,
                        end: 5,
                    },
                },
                definitions: [
                    Module(
                        Module {
                            comment: Comment(
                                [
                                    "Inner module",
                                ],
                            ),
                            name: Name {
                                value: "b",
                                span: Span {
                                    start: 37,
                                    end: 38,
                                },
                            },
                            definitions: [
                                Enum(
                                    Enum {
                                        comment: Comment(
                                            [],
                                        ),
                                        attributes: Attributes(
                                            [],
                                        ),
                                        name: Name {
                                            value: "Sample",
                                            span: Span {
                                                start: 54,
                                                end: 60,
                                            },
                                        },
                                        generics: Generics(
                                            [],
                                        ),
                                        variants: [
                                            Variant {
                                                comment: Comment(
                                                    [],
                                                ),
                                                name: Name {
                                                    value: "One",
                                                    span: Span {
                                                        start: 75,
                                                        end: 78,
                                                    },
                                                },
                                                fields: Unit,
                                                id: Id {
                                                    value: 1,
                                                    span: Span {
                                                        start: 79,
                                                        end: 81,
                                                    },
                                                },
                                                span: Span {
                                                    start: 75,
                                                    end: 81,
                                                },
                                            },
                                        ],
                                    },
                                ),
                            ],
                        },
                    ),
                    Struct(
                        Struct {
                            comment: Comment(
                                [],
                            ),
                            attributes: Attributes(
                                [],
                            ),
                            name: Name {
                                value: "Sample",
                                span: Span {
                                    start: 111,
                                    end: 117,
                                },
                            },
                            generics: Generics(
                                [],
                            ),
                            fields: Named(
                                [
                                    NamedField {
                                        comment: Comment(
                                            [],
                                        ),
                                        name: Name {
                                            value: "value",
                                            span: Span {
                                                start: 128,
                                                end: 133,
                                            },
                                        },
                                        ty: Type {
                                            value: U32,
                                            span: Span {
                                                start: 135,
                                                end: 138,
                                            },
                                        },
                                        id: Id {
                                            value: 1,
                                            span: Span {
                                                start: 139,
                                                end: 141,
                                            },
                                        },
                                        span: Span {
                                            start: 128,
                                            end: 141,
                                        },
                                    },
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
